--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <a target="_blank"
                         href="https://drive.google.com/file/d/1B2R0U0KkudedWtplpLFFOClFAfxF5YBA/view?usp=drive_link"
                         class="btn">Resume</a>
-                    <a target="_blank" href="https://www.linkedin.com/in/himanshu-chaudhary-2a9166257" class="btn">Visit
+                    <a target="_blank" href="https://www.linkedin.com/in/himanshu-chaudhary-2a9166257" class="btn">
                         linkedin</a>
                 </div>
             </div>
